# Hack-Quest

./: Hack_Tkinter.py  Main_Hack.py  Main_Hack.spec  README.md  passwords_patterns.txt  pyproject.toml
.github/workflows/: publish-to-pypi.yml  python-publish.yml
hackquest.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
