[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hackquest"
version = "0.1.0"
description = "A CLI adventure game where you play as a hacker trying to break into a bank vault."
authors = [
    { name="Samy0_o", email="samytonygo@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "rich"
]
license = { file = "LICENSE" }

[project.scripts]
hackquest = "Main_Hack:main"
